Resolves: tdf#99291 empty array element should not match empty cell

As weird as it is, but an empty cell is only to be matched by an empty string,
not another empty cell.

Affects spreadsheet functions SUMIF, AVERAGEIF, COUNTIF, SUMIFS, AVERAGEIFS and
COUNTIFS.

Change-Id: Ib33402e8c93f26cd8e2648426a5bde6b267c55ab